# tango

./: .readthedocs.yml  environment.yml  environment_osx.yml  mkdocs.yml  pyproject.toml
configs/: tutorial.yaml
docs/: gen_ref_pages.py  index.md
src/neuroposelib/: DataStruct.py  __init__.py  analysis.py  embed.py  features.py  preprocess.py  read.py  validation.py  write.py
src/neuroposelib/io/: __init__.py  read.py  write.py
src/neuroposelib/visualization/: constants.py  plot.py  pose.py
tests/: wlet_test.ipynb
